--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
+paginate: 5
+paginate_path: '/page/:num/'
 permalink: pretty
 markdown: kramdown
 gems:
