--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -1,50 +1,53 @@
-Alteq: [Matthew Good Band - Running for Home, World/Inferno Friendship Society - Cats
-    Are Not Lucky Creatures, Rubblebucket - Came Out of a Lady, Queen - Play the Game,
-  Ezra Furman - Tell Em All to Go to Hell, Baths - Yeoman, Donald Fagen - I.G.Y.,
-  Childish Gambino -- Boogieman, Moses Sumney - Quarrel, Ben Gibbard - The Concept,
-  Hop Along - Tibetan Pop Stars, Broken Social Scene - Gonna Get Better, Wells Fargo
-    -- Coming Home, LCD Soundstyem - You Can't Hide / Shame on You, John Grant - Snug
-    Slacks]
-Amdusias: [Paramore- Rose-colored Boy, 'The Library- You Don''t Need No Doctor, Sugar',
-  Zola Jesus - Exhumed, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR\
-    \ GUiTAR- Live", 'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep,
-  DJ Shadow - Horror Show, Protest the Hero - Caravan, Mutemath - Prytania, TRUTHR-
-    Earth II, London Grammar- Non Believer, Allie X- Paper Love, Pryapisme - Totipotence
-    D'un Erg, Meniscus- Doom]
-Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
-    - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
-    Show]
-Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
-Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Sky Ferreira
-    - Werewolf, Muse - Map of the Problematique, Matthew Good - Running For Home,
-  Mogwai - Crossing the Road Material, "Dave Brubeck - Blue Rondo \xE0 la Turk", Boards
-    of Canada - nlogax, Fleet Foxes - Mykonos, Solange - Left Side Drive, Beach House
-    - The Hours, Stravinsky - The National Anthem, My Bloody Valentine - I only said,
-  Dengue Fever - Sni Bong, Magnus Palsson - Pressure Cooker, Boards of Canada - Turquoise
-    Hexagon Sun]
-Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Yeasayer - Divine Simulacrum,
-  The Beaches - Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast
-    - Midnight Radio', Lesley Gore - It's My Party, Adore Delano - Negative Nancy,
-  Kesha - Finding You, Cyndi Lauper - When You Were Mine, Magik\*Magik - Front of
-    the Line, Fire Inc. - Nowhere Fast, Darren Hayes - A Conversation With God]
-Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, Everything Everything - Cough Cough,
-  Singularity - Print, Leonard Bernstein - Symphony 3 "Kaddish", Stravinsky - Le Rossignol
-    prelude, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we rock together',
-  Nujabes - Luv (Sic), Shpongle - Room 23, Godspeed You! Black Emperor - rockets fall
-    on Rocket Falls, Truxton - Automation Astrosmash, Shawn Wasabi - Otter Pop, Hiatus
-    Kaiyote - Mobius Streak, Vitas - Opera 2, XTC - Complicated Game, Worriers - They/Them/Theirs]
+Alteq: [John Grant - Snug Slacks, World/Inferno Friendship Society - Cats Are Not
+    Lucky Creatures, Broken Social Scene - Gonna Get Better, Wells Fargo -- Coming
+    Home, Matthew Good Band - Running for Home, Hop Along - Tibetan Pop Stars, Childish
+    Gambino -- Boogieman, Ben Gibbard - The Concept, Queen - Play the Game, Donald
+    Fagen - I.G.Y., LCD Soundstyem - You Can't Hide / Shame on You, Ezra Furman -
+    Tell Em All to Go to Hell, Rubblebucket - Came Out of a Lady, Baths - Yeoman,
+  Moses Sumney - Quarrel, Diarrhea Planet - Ghost With A Boner]
+Amdusias: [Meniscus- Doom, 'The Library- You Don''t Need No Doctor, Sugar', London
+    Grammar- Non Believer, Allie X- Paper Love, Paramore- Rose-colored Boy, TRUTHR-
+    Earth II, DJ Shadow - Horror Show, Mutemath - Prytania, "Mondo Grosso- \u30E9\u30D3\
+    \u30EA\u30F3\u30B9", clipping. - The Deep, Pryapisme - Totipotence D'un Erg, "\u2605\
+    STAR GUiTAR- Live", Zola Jesus - Exhumed, 'Oathbreaker- 10:56 / Second Son of
+    R.', Protest the Hero - Caravan, Rapsody - Power]
+Duster: [Swirlies - One Light Flashing I Love You, Kincaid - Parachute, Women - Group
+    Transport Hall, Spare Snare - As a Matter of Fact, Strange Ranger - House Show]
+Klyvert: [Galaxie 500 - Tugboat, The Waterboys - This Is The Sea]
+Lorxus: [Boards of Canada - Turquoise Hexagon Sun, Sky Ferreira - Werewolf, My Bloody
+    Valentine - I only said, Dengue Fever - Sni Bong, 'This Will Destroy You - Killed
+    The Lord, Left For the New World', Stravinsky - The National Anthem, Fleet Foxes
+    - Mykonos, Beach House - The Hours, Matthew Good - Running For Home, Boards of
+    Canada - nlogax, Magnus Palsson - Pressure Cooker, Mogwai - Crossing the Road
+    Material, Muse - Map of the Problematique, "Dave Brubeck - Blue Rondo \xE0 la\
+    \ Turk", Solange - Left Side Drive, The Books - Smells Like Content]
+Lu: [Darren Hayes - A Conversation With God, Yeasayer - Divine Simulacrum, Magik\*Magik
+    - Front of the Line, Fire Inc. - Nowhere Fast, Basement Jaxx vs. Metropole Orkest
+    - Good Luck, Cyndi Lauper - When You Were Mine, Adore Delano - Negative Nancy,
+  Kesha - Finding You, The Beaches - Little Pieces, Lesley Gore - It's My Party, 'Neil
+    Patrick Harris, Hedwig and the Angry Inch Cast - Midnight Radio', Nick Drake -
+    Things Behind the Sun]
+Makyo: [Worriers - They/Them/Theirs, Everything Everything - Cough Cough, Hiatus Kaiyote
+    - Mobius Streak, Vitas - Opera 2, Todd Reynolds/Nick Zammuto - Fast Pasture, Shawn
+    Wasabi - Otter Pop, Shpongle - Room 23, Truxton - Automation Astrosmash, Leonard
+    Bernstein - Symphony 3 "Kaddish", Nujabes - Luv (Sic), XTC - Complicated Game,
+  Stravinsky - Le Rossignol prelude, Singularity - Print, 'Vulfpeck ft. Antwaun Stanley
+    - Birds of a feather, we rock together', Godspeed You! Black Emperor - rockets
+    fall on Rocket Falls, Django Django - Found You]
 Mando: [Negrita - Rotolando Verso Sud]
-Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Busdriver - Imaginary Places,
-  Hrishikesh Hirway - Song Exploder, Louis Cole - Weird Part of the Night, Ihsahn
-    - Between the Eagle and the Snake, That Handsome Devil - Elephant Bones]
-Proxy: [Charisma.com - NOW, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), Sote
-    - Plural, Fiona Apple - Fast As You Can, "Bj\xF6rk - Pluto", Yuragi - night is
-    young, Mykki Blanco - The Plug Won't, The World Is A Beautiful Place & I Am No
-    Longer Afraid To Die - The Future, Carly Rae Jepsen - Cut To The Feeling, "\u2020\u2021\
-    \u2020 - Baba Vanga", Pedestrian Deposit - You Didn't Break Me, Angel Olsen -
-    Shut Up Kiss Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The Void]
-Rodo: [Lemon Demon - When He Died]
+Peri: [Frost* - Heartstrings, That Handsome Devil - Elephant Bones, Busdriver - Imaginary
+    Places, Hrishikesh Hirway - Song Exploder, Dengue Fever - Sni Bong, Louis Cole
+    - Weird Part of the Night, Ihsahn - Between the Eagle and the Snake, Phideaux
+    - Microdeath Softstar]
+Proxy: [Sidewalks and Skeletons - The Void, Charisma.com - NOW, Pedestrian Deposit
+    - You Didn't Break Me, Angel Olsen - Shut Up Kiss Me, "\u2020\u2021\u2020 - Baba\
+    \ Vanga", Mykki Blanco - The Plug Won't, Carly Rae Jepsen - Cut To The Feeling,
+  Sote - Plural, Yuragi - night is young, Brockhampton - JUNKY, Fiona Apple - Fast
+    As You Can, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), "Bj\xF6rk - Pluto",
+  The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Yaeji
+    - Last Breath]
+Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time]
-Veyote: ["Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
-    Her Right Back (feat. Dances With White Girls), Metrik - Hi!, Tchami - World To
-    Me (feat. Luke James), The Mary Nixons - Adrian]
+Veyote: [Tchami - World To Me (feat. Luke James), The Mary Nixons - Adrian, Metrik
+    - Hi!, "Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
+    Her Right Back (feat. Dances With White Girls)]
