--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -5,13 +5,14 @@ Alteq: [John Grant - Snug Slacks, World/Inferno Friendship Society - Cats Are No
     Fagen - I.G.Y., LCD Soundstyem - You Can't Hide / Shame on You, Ezra Furman -
     Tell Em All to Go to Hell, Rubblebucket - Came Out of a Lady, Baths - Yeoman,
   Moses Sumney - Quarrel, Diarrhea Planet - Ghost With A Boner, Bibio - Light Up The
-    Sky]
+    Sky, The Mountain Goats -- Amy aka Spent Gladiator 1]
 Amdusias: [Meniscus- Doom, 'The Library- You Don''t Need No Doctor, Sugar', London
     Grammar- Non Believer, Allie X- Paper Love, Paramore- Rose-colored Boy, TRUTHR-
     Earth II, DJ Shadow - Horror Show, Mutemath - Prytania, "Mondo Grosso- \u30E9\u30D3\
     \u30EA\u30F3\u30B9", clipping. - The Deep, Pryapisme - Totipotence D'un Erg, "\u2605\
     STAR GUiTAR- Live", Zola Jesus - Exhumed, 'Oathbreaker- 10:56 / Second Son of
-    R.', Protest the Hero - Caravan, Rapsody - Power, Kamasi Washington- Truth]
+    R.', Protest the Hero - Caravan, Rapsody - Power, Kamasi Washington- Truth, St.
+    Vincent - Los Ageless]
 Duster: [Swirlies - One Light Flashing I Love You, Kincaid - Parachute, Women - Group
     Transport Hall, Spare Snare - As a Matter of Fact, Strange Ranger - House Show,
   Electro Group - Captain New Mexico]
@@ -23,20 +24,21 @@ Lorxus: [Boards of Canada - Turquoise Hexagon Sun, Sky Ferreira - Werewolf, My B
     Canada - nlogax, Magnus Palsson - Pressure Cooker, Mogwai - Crossing the Road
     Material, Muse - Map of the Problematique, "Dave Brubeck - Blue Rondo \xE0 la\
     \ Turk", Solange - Left Side Drive, The Books - Smells Like Content, Doves - The
-    Man Who Sold Everything]
+    Man Who Sold Everything, Jamie xx - Just Saying]
 Lu: [Darren Hayes - A Conversation With God, Yeasayer - Divine Simulacrum, Magik\*Magik
     - Front of the Line, Fire Inc. - Nowhere Fast, Basement Jaxx vs. Metropole Orkest
     - Good Luck, Cyndi Lauper - When You Were Mine, Adore Delano - Negative Nancy,
   Kesha - Finding You, The Beaches - Little Pieces, Lesley Gore - It's My Party, 'Neil
     Patrick Harris, Hedwig and the Angry Inch Cast - Midnight Radio', Nick Drake -
-    Things Behind the Sun, Celine Neon - Lengua]
+    Things Behind the Sun, Celine Neon - Lengua, Stars - Fluorescent Lights]
 Makyo: [Worriers - They/Them/Theirs, Everything Everything - Cough Cough, Hiatus Kaiyote
     - Mobius Streak, Vitas - Opera 2, Todd Reynolds/Nick Zammuto - Fast Pasture, Shawn
     Wasabi - Otter Pop, Shpongle - Room 23, Truxton - Automation Astrosmash, Leonard
     Bernstein - Symphony 3 "Kaddish", Nujabes - Luv (Sic), XTC - Complicated Game,
   Stravinsky - Le Rossignol prelude, Singularity - Print, 'Vulfpeck ft. Antwaun Stanley
     - Birds of a feather, we rock together', Godspeed You! Black Emperor - rockets
-    fall on Rocket Falls, Django Django - Found You, Tan Dun - Ghost Opera]
+    fall on Rocket Falls, Django Django - Found You, Tan Dun - Ghost Opera, Zammuto
+    - It Can Feel So Good]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, That Handsome Devil - Elephant Bones, Busdriver - Imaginary
     Places, Hrishikesh Hirway - Song Exploder, Dengue Fever - Sni Bong, Louis Cole
@@ -48,7 +50,7 @@ Proxy: [Sidewalks and Skeletons - The Void, Charisma.com - NOW, Pedestrian Depos
   Sote - Plural, Yuragi - night is young, Brockhampton - JUNKY, Fiona Apple - Fast
     As You Can, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), "Bj\xF6rk - Pluto",
   The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Yaeji
-    - Last Breath, Kelela - Onanon]
+    - Last Breath, Kelela - Onanon, 'Mitski - Goodbye, My Danish Sweetheart']
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time]
 Veyote: [Tchami - World To Me (feat. Luke James), The Mary Nixons - Adrian, Metrik
