--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -6,14 +6,15 @@ Alteq: [John Grant - Snug Slacks, World/Inferno Friendship Society - Cats Are No
     Tell Em All to Go to Hell, Rubblebucket - Came Out of a Lady, Baths - Yeoman,
   Moses Sumney - Quarrel, Diarrhea Planet - Ghost With A Boner, Bibio - Light Up The
     Sky, The Mountain Goats -- Amy aka Spent Gladiator 1, Flies Are Spies From Hell
-    - Welcome Wolves, Deca - Angel Butter]
+    - Welcome Wolves, Deca - Angel Butter, Spoon - Inside Out]
 Amdusias: [Meniscus- Doom, 'The Library- You Don''t Need No Doctor, Sugar', London
     Grammar- Non Believer, Allie X- Paper Love, Paramore- Rose-colored Boy, TRUTHR-
     Earth II, DJ Shadow - Horror Show, Mutemath - Prytania, "Mondo Grosso- \u30E9\u30D3\
     \u30EA\u30F3\u30B9", clipping. - The Deep, Pryapisme - Totipotence D'un Erg, "\u2605\
     STAR GUiTAR- Live", Zola Jesus - Exhumed, 'Oathbreaker- 10:56 / Second Son of
     R.', Protest the Hero - Caravan, Rapsody - Power, Kamasi Washington- Truth, St.
-    Vincent - Los Ageless, Frou Frou- Flicks, Shamir - Straight Boy]
+    Vincent - Los Ageless, Frou Frou- Flicks, Shamir - Straight Boy, Bent Knee- Terror
+    Bird]
 Duster: [Swirlies - One Light Flashing I Love You, Kincaid - Parachute, Women - Group
     Transport Hall, Spare Snare - As a Matter of Fact, Strange Ranger - House Show,
   Electro Group - Captain New Mexico]
@@ -26,7 +27,7 @@ Lorxus: [Boards of Canada - Turquoise Hexagon Sun, Sky Ferreira - Werewolf, My B
     Material, Muse - Map of the Problematique, "Dave Brubeck - Blue Rondo \xE0 la\
     \ Turk", Solange - Left Side Drive, The Books - Smells Like Content, Doves - The
     Man Who Sold Everything, Jamie xx - Just Saying, Godspeed You! Black Emperor -
-    Rockets Fall on Rocket Falls, Royksopp - Boys]
+    Rockets Fall on Rocket Falls, Royksopp - Boys, Dawn of Midi - Dysnomia]
 Lu: [Darren Hayes - A Conversation With God, Yeasayer - Divine Simulacrum, Magik\*Magik
     - Front of the Line, Fire Inc. - Nowhere Fast, Basement Jaxx vs. Metropole Orkest
     - Good Luck, Cyndi Lauper - When You Were Mine, Adore Delano - Negative Nancy,
@@ -42,7 +43,8 @@ Makyo: [Worriers - They/Them/Theirs, Everything Everything - Cough Cough, Hiatus
     - Birds of a feather, we rock together', Godspeed You! Black Emperor - rockets
     fall on Rocket Falls, Django Django - Found You, Tan Dun - Ghost Opera, Zammuto
     - It Can Feel So Good, Esperanza Spalding - Good Lava, Johannes Brahms - String
-    Sextet No. 2 Mvt I]
+    Sextet No. 2 Mvt I, "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True\
+    \ To Original Edit"]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, That Handsome Devil - Elephant Bones, Busdriver - Imaginary
     Places, Hrishikesh Hirway - Song Exploder, Dengue Fever - Sni Bong, Louis Cole
@@ -56,7 +58,8 @@ Proxy: [Sidewalks and Skeletons - The Void, Charisma.com - NOW, Pedestrian Depos
     As You Can, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), "Bj\xF6rk - Pluto",
   The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Yaeji
     - Last Breath, Kelela - Onanon, 'Mitski - Goodbye, My Danish Sweetheart', Dessa
-    - Good Grief, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko)]
+    - Good Grief, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Iglooghost
+    - White Gum]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
