--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -1,68 +1,68 @@
-Alteq: [John Grant - Snug Slacks, World/Inferno Friendship Society - Cats Are Not
-    Lucky Creatures, Broken Social Scene - Gonna Get Better, Wells Fargo -- Coming
-    Home, Matthew Good Band - Running for Home, Hop Along - Tibetan Pop Stars, Childish
-    Gambino -- Boogieman, Ben Gibbard - The Concept, Queen - Play the Game, Donald
-    Fagen - I.G.Y., LCD Soundstyem - You Can't Hide / Shame on You, Ezra Furman -
-    Tell Em All to Go to Hell, Rubblebucket - Came Out of a Lady, Baths - Yeoman,
-  Moses Sumney - Quarrel, Diarrhea Planet - Ghost With A Boner, Bibio - Light Up The
-    Sky, The Mountain Goats -- Amy aka Spent Gladiator 1, Flies Are Spies From Hell
-    - Welcome Wolves, Deca - Angel Butter, Spoon - Inside Out]
-Amdusias: [Meniscus- Doom, 'The Library- You Don''t Need No Doctor, Sugar', London
-    Grammar- Non Believer, Allie X- Paper Love, Paramore- Rose-colored Boy, TRUTHR-
-    Earth II, DJ Shadow - Horror Show, Mutemath - Prytania, "Mondo Grosso- \u30E9\u30D3\
-    \u30EA\u30F3\u30B9", clipping. - The Deep, Pryapisme - Totipotence D'un Erg, "\u2605\
-    STAR GUiTAR- Live", Zola Jesus - Exhumed, 'Oathbreaker- 10:56 / Second Son of
-    R.', Protest the Hero - Caravan, Rapsody - Power, Kamasi Washington- Truth, St.
-    Vincent - Los Ageless, Frou Frou- Flicks, Shamir - Straight Boy, Bent Knee- Terror
-    Bird]
-Duster: [Swirlies - One Light Flashing I Love You, Kincaid - Parachute, Women - Group
-    Transport Hall, Spare Snare - As a Matter of Fact, Strange Ranger - House Show,
-  Electro Group - Captain New Mexico]
+Alteq: [Moses Sumney - Quarrel, Flies Are Spies From Hell - Welcome Wolves, Bibio
+    - Light Up The Sky, Hop Along - Tibetan Pop Stars, Broken Social Scene - Gonna
+    Get Better, Baths - Yeoman, Matthew Good Band - Running for Home, Childish Gambino
+    -- Boogieman, Ben Gibbard - The Concept, 'Charles Fauna - Hypnosis (Brothertiger
+    Remix) ', Queen - Play the Game, John Grant - Snug Slacks, Donald Fagen - I.G.Y.,
+  Spoon - Inside Out, Deca - Angel Butter, LCD Soundstyem - You Can't Hide / Shame
+    on You, Rubblebucket - Came Out of a Lady, Diarrhea Planet - Ghost With A Boner,
+  The Mountain Goats -- Amy aka Spent Gladiator 1, Wells Fargo -- Coming Home, World/Inferno
+    Friendship Society - Cats Are Not Lucky Creatures, Ezra Furman - Tell Em All to
+    Go to Hell]
+Amdusias: [Protest the Hero - Caravan, Frou Frou- Flicks, Kamasi Washington- Truth,
+  TRUTHR- Earth II, London Grammar- Non Believer, 'Oathbreaker- 10:56 / Second Son
+    of R.', Paramore- Rose-colored Boy, DJ Shadow - Horror Show, Mutemath - Prytania,
+  "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", Meniscus- Doom, clipping. - The
+    Deep, Bent Knee- Terror Bird, Shamir - Straight Boy, Pryapisme - Totipotence D'un
+    Erg, Zola Jesus - Exhumed, Rapsody - Power, St. Vincent - Los Ageless, Allie X-
+    Paper Love, 'The Library- You Don''t Need No Doctor, Sugar', "\u2605STAR GUiTAR-\
+    \ Live"]
+Duster: [Strange Ranger - House Show, Electro Group - Captain New Mexico, Spare Snare
+    - As a Matter of Fact, Swirlies - One Light Flashing I Love You, Unwound - Look
+    A Ghost, Kincaid - Parachute, Women - Group Transport Hall]
 Klyvert: [Galaxie 500 - Tugboat, The Waterboys - This Is The Sea]
-Lorxus: [Boards of Canada - Turquoise Hexagon Sun, Sky Ferreira - Werewolf, My Bloody
-    Valentine - I only said, Dengue Fever - Sni Bong, 'This Will Destroy You - Killed
-    The Lord, Left For the New World', Stravinsky - The National Anthem, Fleet Foxes
-    - Mykonos, Beach House - The Hours, Matthew Good - Running For Home, Boards of
-    Canada - nlogax, Magnus Palsson - Pressure Cooker, Mogwai - Crossing the Road
-    Material, Muse - Map of the Problematique, "Dave Brubeck - Blue Rondo \xE0 la\
-    \ Turk", Solange - Left Side Drive, The Books - Smells Like Content, Doves - The
-    Man Who Sold Everything, Jamie xx - Just Saying, Godspeed You! Black Emperor -
-    Rockets Fall on Rocket Falls, Royksopp - Boys, Dawn of Midi - Dysnomia]
-Lu: [Darren Hayes - A Conversation With God, Yeasayer - Divine Simulacrum, Magik\*Magik
-    - Front of the Line, Fire Inc. - Nowhere Fast, Basement Jaxx vs. Metropole Orkest
-    - Good Luck, Cyndi Lauper - When You Were Mine, Adore Delano - Negative Nancy,
-  Kesha - Finding You, The Beaches - Little Pieces, Lesley Gore - It's My Party, 'Neil
-    Patrick Harris, Hedwig and the Angry Inch Cast - Midnight Radio', Nick Drake -
-    Things Behind the Sun, Celine Neon - Lengua, Stars - Fluorescent Lights, CHVRCHES
-    - Call It Off]
-Makyo: [Worriers - They/Them/Theirs, Everything Everything - Cough Cough, Hiatus Kaiyote
-    - Mobius Streak, Vitas - Opera 2, Todd Reynolds/Nick Zammuto - Fast Pasture, Shawn
-    Wasabi - Otter Pop, Shpongle - Room 23, Truxton - Automation Astrosmash, Leonard
-    Bernstein - Symphony 3 "Kaddish", Nujabes - Luv (Sic), XTC - Complicated Game,
-  Stravinsky - Le Rossignol prelude, Singularity - Print, 'Vulfpeck ft. Antwaun Stanley
-    - Birds of a feather, we rock together', Godspeed You! Black Emperor - rockets
-    fall on Rocket Falls, Django Django - Found You, Tan Dun - Ghost Opera, Zammuto
-    - It Can Feel So Good, Esperanza Spalding - Good Lava, Johannes Brahms - String
-    Sextet No. 2 Mvt I, "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True\
-    \ To Original Edit"]
+Lorxus: [Solange - Left Side Drive, Godspeed You! Black Emperor - Rockets Fall on
+    Rocket Falls, Doves - The Man Who Sold Everything, Stravinsky - The National Anthem,
+  My Bloody Valentine - I only said, "Dave Brubeck - Blue Rondo \xE0 la Turk", 'This
+    Will Destroy You - Killed The Lord, Left For the New World', Fleet Foxes - Mykonos,
+  Beach House - The Hours, Shpongle - Falling Awake, Matthew Good - Running For Home,
+  Boards of Canada - Turquoise Hexagon Sun, Boards of Canada - nlogax, Dawn of Midi
+    - Dysnomia, Royksopp - Boys, Magnus Palsson - Pressure Cooker, Muse - Map of the
+    Problematique, The Books - Smells Like Content, Jamie xx - Just Saying, Dengue
+    Fever - Sni Bong, Sky Ferreira - Werewolf, Mogwai - Crossing the Road Material]
+Lu: [CHVRCHES - Call It Off, Celine Neon - Lengua, Cyndi Lauper - When You Were Mine,
+  Magik\*Magik - Front of the Line, 'Neil Patrick Harris, Hedwig and the Angry Inch
+    Cast - Midnight Radio', Basement Jaxx vs. Metropole Orkest - Good Luck, Adore
+    Delano - Negative Nancy, Kesha - Finding You, The Beaches - Little Pieces, Darren
+    Hayes - A Conversation With God, Lesley Gore - It's My Party, Nick Drake - Things
+    Behind the Sun, Stars - Fluorescent Lights, Fire Inc. - Nowhere Fast, Yeasayer
+    - Divine Simulacrum]
+Makyo: [Godspeed You! Black Emperor - rockets fall on Rocket Falls, Esperanza Spalding
+    - Good Lava, Tan Dun - Ghost Opera, Shawn Wasabi - Otter Pop, Hiatus Kaiyote -
+    Mobius Streak, 'Vulfpeck ft. Antwaun Stanley - Birds of a feather, we rock together',
+  Todd Reynolds/Nick Zammuto - Fast Pasture, Shpongle - Room 23, Truxton - Automation
+    Astrosmash, Leonard Bernstein - Symphony 3 "Kaddish", Worriers - They/Them/Theirs,
+  Nujabes - Luv (Sic), "R\xF6yksopp - Electric Counterpoint III. Fast - RYXP True\
+    \ To Original Edit", Johannes Brahms - String Sextet No. 2 Mvt I, XTC - Complicated
+    Game, Singularity - Print, Django Django - Found You, Zammuto - It Can Feel So
+    Good, Vitas - Opera 2, Everything Everything - Cough Cough, Stravinsky - Le Rossignol
+    prelude]
 Mando: [Negrita - Rotolando Verso Sud]
-Peri: [Frost* - Heartstrings, That Handsome Devil - Elephant Bones, Busdriver - Imaginary
-    Places, Hrishikesh Hirway - Song Exploder, Dengue Fever - Sni Bong, Louis Cole
-    - Weird Part of the Night, Ihsahn - Between the Eagle and the Snake, Phideaux
-    - Microdeath Softstar, 'The Pine Box Boys - Will You Remember Me?', Moldover -
-    Young One]
-Proxy: [Sidewalks and Skeletons - The Void, Charisma.com - NOW, Pedestrian Deposit
-    - You Didn't Break Me, Angel Olsen - Shut Up Kiss Me, "\u2020\u2021\u2020 - Baba\
-    \ Vanga", Mykki Blanco - The Plug Won't, Carly Rae Jepsen - Cut To The Feeling,
-  Sote - Plural, Yuragi - night is young, Brockhampton - JUNKY, Fiona Apple - Fast
-    As You Can, Deerhoof - I Will Spite Survive (feat. Jenn Wasner), "Bj\xF6rk - Pluto",
-  The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Yaeji
-    - Last Breath, Kelela - Onanon, 'Mitski - Goodbye, My Danish Sweetheart', Dessa
-    - Good Grief, Nonsens & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Iglooghost
-    - White Gum]
+Peri: [Ihsahn - Between the Eagle and the Snake, 'The Pine Box Boys - Will You Remember
+    Me?', That Handsome Devil - Elephant Bones, Louis Cole - Weird Part of the Night,
+  Busdriver - Imaginary Places, Moldover - Young One, Dengue Fever - Sni Bong, Phideaux
+    - Microdeath Softstar, Frost* - Heartstrings, Hrishikesh Hirway - Song Exploder]
+Proxy: [The World Is A Beautiful Place & I Am No Longer Afraid To Die - The Future,
+  Dessa - Good Grief, Kelela - Onanon, "\u2020\u2021\u2020 - Baba Vanga", Pedestrian
+    Deposit - You Didn't Break Me, "Bj\xF6rk - Pluto", Mykki Blanco - The Plug Won't,
+  Carly Rae Jepsen - Cut To The Feeling, Baths - Adam Copies, Sote - Plural, Sidewalks
+    and Skeletons - The Void, Yuragi - night is young, Iglooghost - White Gum, Nonsens
+    & TREKKIE TRAX CREW - Ballistic (feat. Ashnikko), Brockhampton - JUNKY, Deerhoof
+    - I Will Spite Survive (feat. Jenn Wasner), Yaeji - Last Breath, 'Mitski - Goodbye,
+    My Danish Sweetheart', Angel Olsen - Shut Up Kiss Me, Charisma.com - NOW, Fiona
+    Apple - Fast As You Can]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
-Veyote: [Tchami - World To Me (feat. Luke James), The Mary Nixons - Adrian, Metrik
-    - Hi!, "Above & Beyond - My Own Hymn (feat. Zo\xEB Johnston)", Chris Lake - Give
-    Her Right Back (feat. Dances With White Girls)]
+Veyote: [Tchami - World To Me (feat. Luke James), Chris Lake - Give Her Right Back
+    (feat. Dances With White Girls), Metrik - Hi!, "Above & Beyond - My Own Hymn (feat.\
+    \ Zo\xEB Johnston)", The Mary Nixons - Adrian]
