--- a/_data/weeklyify.yml
+++ b/_data/weeklyify.yml
@@ -6,20 +6,21 @@ Alteq: [Matthew Good Band - Running for Home, Spoon - Inside Out, The Mountain G
     -- Boogieman, Moses Sumney - Quarrel, Deca - Angel Butter, Ben Gibbard - The Concept,
   Diarrhea Planet - Ghost With A Boner, Hop Along - Tibetan Pop Stars, 'Charles Fauna
     - Hypnosis (Brothertiger Remix) ', Bibio - Light Up The Sky, Broken Social Scene
-    - Gonna Get Better, Wells Fargo -- Coming Home, LCD Soundstyem - You Can't Hide
-    / Shame on You, John Grant - Snug Slacks]
+    - Gonna Get Better, Majical Cloudz - Turns Turns Turns, Wells Fargo -- Coming
+    Home, LCD Soundstyem - You Can't Hide / Shame on You, John Grant - Snug Slacks]
 Amdusias: [Paramore- Rose-colored Boy, Bent Knee- Terror Bird, St. Vincent - Los Ageless,
   Frou Frou- Flicks, 'The Library- You Don''t Need No Doctor, Sugar', Soulwax- Masterplanned,
   Zola Jesus - Exhumed, "Mondo Grosso- \u30E9\u30D3\u30EA\u30F3\u30B9", "\u2605STAR\
     \ GUiTAR- Live", 'Oathbreaker- 10:56 / Second Son of R.', clipping. - The Deep,
   DJ Shadow - Horror Show, Protest the Hero - Caravan, Shamir - Straight Boy, Mutemath
     - Prytania, Rapsody - Power, TRUTHR- Earth II, Kamasi Washington- Truth, London
-    Grammar- Non Believer, Allie X- Paper Love, Pryapisme - Totipotence D'un Erg,
-  Meniscus- Doom]
+    Grammar- Non Believer, Phoebe Bridgers- Funeral, "Archspire- Involuntary Doppelg\xE4\
+    nger", Allie X- Paper Love, Pryapisme - Totipotence D'un Erg, Meniscus- Doom]
 Duster: [Women - Group Transport Hall, Spare Snare - As a Matter of Fact, Kincaid
     - Parachute, Swirlies - One Light Flashing I Love You, Strange Ranger - House
     Show, Unwound - Look A Ghost, Electro Group - Captain New Mexico]
 Klyvert: [The Waterboys - This Is The Sea, Galaxie 500 - Tugboat]
+Knacker: ['Michael Geyre, Shinichi Sakamoto - Monster-Town']
 Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn of
     Midi - Dysnomia, Jamie xx - Just Saying, Godspeed You! Black Emperor - Rockets
     Fall on Rocket Falls, Sky Ferreira - Werewolf, Foxhole - A Children's Canto, Muse
@@ -28,15 +29,17 @@ Lorxus: ['This Will Destroy You - Killed The Lord, Left For the New World', Dawn
     - nlogax, Fleet Foxes - Mykonos, Solange - Left Side Drive, Royksopp - Boys, Beach
     House - The Hours, The Books - Smells Like Content, Stravinsky - The National
     Anthem, Shpongle - Falling Awake, Doves - The Man Who Sold Everything, My Bloody
-    Valentine - I only said, Dengue Fever - Sni Bong, Magnus Palsson - Pressure Cooker,
-  Boards of Canada - Turquoise Hexagon Sun]
+    Valentine - I only said, They Move On Tracks of Neverending Light, David Bowie
+    - Modern Love, Dengue Fever - Sni Bong, Magnus Palsson - Pressure Cooker, Boards
+    of Canada - Turquoise Hexagon Sun]
 Lu: [Basement Jaxx vs. Metropole Orkest - Good Luck, Stars - Fluorescent Lights, CHVRCHES
     - Call It Off, Yeasayer - Divine Simulacrum, BATHS - Broadback, The Beaches -
     Little Pieces, 'Neil Patrick Harris, Hedwig and the Angry Inch Cast - Midnight
     Radio', Lesley Gore - It's My Party, Adore Delano - Negative Nancy, Kesha - Finding
     You, Nick Drake - Things Behind the Sun, Cyndi Lauper - When You Were Mine, Celine
-    Neon - Lengua, Magik\*Magik - Front of the Line, Fire Inc. - Nowhere Fast, Darren
-    Hayes - A Conversation With God]
+    Neon - Lengua, Magik\*Magik - Front of the Line, 'Marvin Gaye, Studio Rio - Sexual
+    Healing', Sufjan Stevens - Tonya Harding (In D major), Fire Inc. - Nowhere Fast,
+  Darren Hayes - A Conversation With God]
 Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Counterpoint\
     \ III. Fast - RYXP True To Original Edit", Zammuto - It Can Feel So Good, Esperanza
     Spalding - Good Lava, Everything Everything - Cough Cough, "R\xF6yksopp and Robyn\
@@ -45,14 +48,16 @@ Makyo: [Todd Reynolds/Nick Zammuto - Fast Pasture, "R\xF6yksopp - Electric Count
     rock together', Nujabes - Luv (Sic), Shpongle - Room 23, Godspeed You! Black Emperor
     - rockets fall on Rocket Falls, Johannes Brahms - String Sextet No. 2 Mvt I, Truxton
     - Automation Astrosmash, Django Django - Found You, Shawn Wasabi - Otter Pop,
-  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Vitas - Opera 2, XTC - Complicated
-    Game, Worriers - They/Them/Theirs]
+  Tan Dun - Ghost Opera, Hiatus Kaiyote - Mobius Streak, Caspian - Sycamore, This
+    Will Destroy You - Little Smoke, Vitas - Opera 2, XTC - Complicated Game, Worriers
+    - They/Them/Theirs]
 Mando: [Negrita - Rotolando Verso Sud]
 Peri: [Frost* - Heartstrings, Dengue Fever - Sni Bong, Busdriver - Imaginary Places,
   Hrishikesh Hirway - Song Exploder, Louis Cole - Weird Part of the Night, Ihsahn
     - Between the Eagle and the Snake, Moldover - Young One, Phideaux - Microdeath
     Softstar, That Handsome Devil - Elephant Bones, 'The Pine Box Boys - Will You
-    Remember Me?']
+    Remember Me?', Diablo Swing Orchestra - Lady Clandestine Chainbreaker, Hanggai
+    - Back to You]
 Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa -
     Good Grief, Charisma.com - NOW, Bjork - Arisen My Senses, Deerhoof - I Will Spite
     Survive (feat. Jenn Wasner), Sote - Plural, Fiona Apple - Fast As You Can, "Bj\xF6\
@@ -60,8 +65,9 @@ Proxy: [Iglooghost - White Gum, 'Mitski - Goodbye, My Danish Sweetheart', Dessa 
     Is A Beautiful Place & I Am No Longer Afraid To Die - The Future, Nonsens & TREKKIE
     TRAX CREW - Ballistic (feat. Ashnikko), Carly Rae Jepsen - Cut To The Feeling,
   Yaeji - Last Breath, "\u2020\u2021\u2020 - Baba Vanga", Baths - Adam Copies, Kelela
-    - Onanon, Pedestrian Deposit - You Didn't Break Me, Angel Olsen - Shut Up Kiss
-    Me, Brockhampton - JUNKY, Sidewalks and Skeletons - The Void]
+    - Onanon, Pedestrian Deposit - You Didn't Break Me, The Body & Full Of Hell -
+    Earth Is A Cage, Remo-con - Vermillion, Angel Olsen - Shut Up Kiss Me, Brockhampton
+    - JUNKY, Sidewalks and Skeletons - The Void]
 Rodo: [Lemon Demon - When He Died, Soulja Boy - Anime]
 SignificantOtter: [Streetlight Manifesto - A Better Place A Better Time, AlicebanD
     - It Gets Better]
